--- a/src/pages/Blog/Blog.module.scss
+++ b/src/pages/Blog/Blog.module.scss
@@ -9,7 +9,7 @@
 
 .header {
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 .title {
